[tool.poetry]
name = "renovate-test-poetry-extras"
version = "0.0.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
cowsay = {version = "6.1", optional = true}

[tool.poetry.extras]
cowsay-extra = ["cowsay"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
